--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -15,11 +15,14 @@
     </head>
     <body>
         <div class="b-start">
-            <button id="start" class="js-start" onclick="wordStage.start();">Start</button>
+            <button id="start" class="js-start">Start</button>
             <button id="add" class="js-add">Add</button>
         </div>
         <div id="stage" class="js-wordStage b-stage hidden">
             <div class="js-wordStageTop">
+                <input type="text" id="testCharacterCode" />
+                <button type="button" id="testImages" onclick="javascript:showImages();">Show</button>
+                <div id="images"></div>
                 <div class="js-wordCharacter">
                     <label id="character"></label>
                 </div>
@@ -34,28 +37,40 @@
                 <img id="image" alt="word image" />
             </div>
         </div>
-        <div class="js-add-page">
-            <div>
+        <div id="addStage" class="js-add-page hidden">
                 <form method="post" enctype="multipart/form-data" 
                 action="javascript:materialProvider.linkImageToCharacter();">
                     <input type="file" id="imageFile" name="imageFile" />
                     <label id="fileSize"></label>
+                    <br />
+                    <label>Character</label>
+                    <input type="text" id="characterCode"/>
+                    <br />
                     <button type="submit" id="uploadImage">Submit</button>
                 </form>
-                <button type="button" class="js-camera">Camera</button>
-            </div>
-            <div>
-                <label>Character</label>
-                <input type="text" id="characterCode"/>
-            </div>
-            <div>
-                <button type="button" class="js-complete-add">Add</button>
-            </div>
         </div>
         
         <script type="text/javascript" src="resource/index.js"></script>
         <script type="text/javascript">
             var materialProvider = new MeterialProvider("imageFile", "characterCode");
+        </script>
+        <script type="text/javascript">
+            function showImages(){
+                var characterCode = dom.getById("testCharacterCode").value;
+                ajax.get(langstyle.characterCodeUrl + "/" + characterCode).then(function(characterId){
+                        ajax.get(langstyle.characterImagesUrl + "/" + characterId).then(function(imageIds){
+                            var imageIdArray = imageIds.split(",");
+                            var imagesArea = dom.getById("images");
+                            dom.emptyElement(imagesArea);
+                            for(var i= imageIdArray.length-1;i>=0;i--){
+                                var imageView = dom.createElement("image"); 
+                                imageView.alt = imageIdArray[i];
+                                imageView.src = langstyle.imageUrl + "/" + imageIdArray[i];
+                                imagesArea.appendChild(imageView);
+                            }
+                            });
+                });
+            }
         </script>
     </body>
 </html>
