--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -28,6 +28,9 @@
                 <button type="button" id="playSound" class="sound">
                     <span></span>
                 </button>
+                <p>
+                    <button type="button" id="nextImage">Next Image (test)</button>
+                </p>
                 <div id="images"></div>
                 <div class="js-wordSound">
                     <audio id="sound"></audio>
