support register user

--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -61,10 +61,10 @@
             <input type="text" id="userName"/>
             <br />
             <label>Password</label>
-            <input type="text" id="password"/>
+            <input type="password" id="password"/>
             <br />
             <label>Confirm Password</label>
-            <input type="text" id="confirmPassword"/>
+            <input type="password" id="confirmPassword"/>
             <br />
             <label class="js-user-validation"></label>
             <br />
