--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -16,11 +16,15 @@
         <script type="text/javascript" src="resource/materialProvider.js"></script>
     </head>
     <body>
-        <div class="b-start">
+        <div id="header">
             <button class="js-start-menu">Start</button>
             <button class="js-add-menu">Add</button>
-            <button class="js-register-menu">Register</button>
+            <div class="header-right">
+                <button class="js-login-menu">Log in</button>
+                <button class="js-register-menu">Register</button>
+            </div>
         </div>
+
         <div id="stage" class="js-wordStage b-stage hidden">
             <button type="button" class="js-next" onclick="javascript:wordStage.play();">Next</button>
             <div class="js-wordStageTop">
@@ -56,19 +60,33 @@
             </form>
         </div>
 
-        <div id="registerUser">
+        <div id="loginPage" class="form">
             <label>User Name</label>
-            <input type="text" id="userName"/>
+            <input type="text" id="loginUserName"/>
             <br />
             <label>Password</label>
-            <input type="password" id="password"/>
+            <input type="password" id="loginPassword"/>
+            <br />
+            <label class="js-login-validation validation"></label>
+            <div class="formBottom">
+                <button type="button" id="login">Log in</button>
+            </div>
+        </div>
+
+        <div id="registerPage" class="form">
+            <label>User Name</label>
+            <input type="text" id="registerUserName"/>
+            <br />
+            <label>Password</label>
+            <input type="password" id="registerPassword"/>
             <br />
             <label>Confirm Password</label>
-            <input type="password" id="confirmPassword"/>
+            <input type="password" id="registerConfirmPassword"/>
             <br />
-            <label class="js-user-validation"></label>
-            <br />
-            <button type="button" id="register">Register</button>
+            <label class="js-register-validation validation"></label>
+            <div class="formBottom">
+                <button type="button" id="register">Register</button>
+            </div>
         </div>
         
         <script type="text/javascript" src="resource/index.js"></script>
