client cache user name

--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -21,6 +21,7 @@
             <button class="js-start-menu">Start</button>
             <button class="js-add-menu">Add</button>
             <div class="header-right">
+                <label id="userName"></label>
                 <button class="js-login-menu">Log in</button>
                 <button class="js-logout-menu">Log out</button>
                 <button class="js-register-menu">Register</button>
@@ -91,6 +92,6 @@
             </div>
         </div>
         
-        <script type="text/javascript" src="resource/index.js"></script>
+        <script type="text/javascript" src="resource/app.js"></script>
     </body>
 </html>
