image view navigation

--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -37,16 +37,14 @@
                 <!--<button type="button" id="playSound" class="sound">
                     <span></span>
                 </button>-->
-                <p>
-                    <button type="button" id="nextImage">Next Image (test)</button>
-                </p>
+                <div id="imageNav" class="hidden">
+                    <a id="previousImage" class="previousArrow"></a>
+                    <a id="nextImage" class="nextArrow"></a>
+                </div>
                 <div id="images"></div>
                 <div class="js-wordSound">
                     <audio id="sound"></audio>
                 </div>
-            </div>
-            <div class="">
-                <img id="image" alt="word image" />
             </div>
         </div>
 
