--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>language style</title>
+        <title>langstyle</title>
         <link rel="Stylesheet" href="resource/langstyle.css" />
         <script type="text/javascript" src="resource/promise.js"></script>
         <script type="text/javascript" src="resource/ajax.js"></script>
@@ -18,11 +18,10 @@
         <script type="text/javascript" src="resource/materialProvider.js"></script>
     </head>
     <body>
-        <div id="header" class="header">            <div class="logo">
-            </div>
+        <div id="header" class="header">
             <div class="header-left">                <ol class="menu-list">
                     <li class="menu-list-item logo-menu">
-                        <a href class="logo-text">Langstyle</a>
+                        <a href="" class="logo-text">Langstyle</a>
                     </li>
                     <li class="menu-list-item">
                         <a class="js-start-menu menu-item"><span class="menu-item-span">Start</span></a>
@@ -73,24 +72,28 @@
                 </div>
             </div>
 
-            <div id="addStage" class="js-add-page stage hidden">
+            <div id="addStage" class="js-add-page form stage hidden">
                 <form method="post" enctype="multipart/form-data" 
                 action="javascript:materialProvider.linkImageToCharacter();">
+                    <label class="fieldLabel">Image</label>
                     <input type="file" id="imageFile" name="imageFile" />
                     <label id="fileSize"></label>
                     <br />
-                    <label>Character</label>
+                    <label class="fieldLabel">Character</label>
                     <input type="text" id="characterCode"/>
                     <br />
-                    <button type="submit" id="uploadImage">Submit</button>
+                    <label class="js-add-validation validation"></label>
+                    <div class="formBottom">
+                        <button type="submit" id="uploadImage">Submit</button>
+                    </div>
                 </form>
             </div>
 
             <div id="loginPage" class="form hidden">
-                <label>User Name</label>
+                <label class="fieldLabel">User Name</label>
                 <input type="text" id="loginUserName"/>
                 <br />
-                <label>Password</label>
+                <label class="fieldLabel">Password</label>
                 <input type="password" id="loginPassword"/>
                 <br />
                 <label class="js-login-validation validation"></label>
@@ -100,13 +103,13 @@
             </div>
 
             <div id="registerPage" class="form hidden">
-                <label>User Name</label>
+                <label class="fieldLabel">User Name</label>
                 <input type="text" id="registerUserName"/>
                 <br />
-                <label>Password</label>
+                <label class="fieldLabel">Password</label>
                 <input type="password" id="registerPassword"/>
                 <br />
-                <label>Confirm Password</label>
+                <label class="fieldLabel">Confirm Password</label>
                 <input type="password" id="registerConfirmPassword"/>
                 <br />
                 <label class="js-register-validation validation"></label>
