begin sound service

--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -66,9 +66,7 @@
                         <a id="nextImage" class="nextArrow"></a>
                     </div>
                     <div id="images" class="imageView"></div>
-                    <div class="js-wordSound">
-                        <audio id="sound"></audio>
-                    </div>
+                    <div id="sounds" class="soundSpeak"></div>
                 </div>
             </div>
 
