play sound when previous or next

--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -6,6 +6,7 @@
         <script type="text/javascript" src="resource/promise.js"></script>
         <script type="text/javascript" src="resource/ajax.js"></script>
         <script type="text/javascript" src="resource/simpleDom.js"></script>
+        <script type="text/javascript" src="resource/customEvent.js"></script>
         <script type="text/javascript" src="resource/langstyle.js"></script>
         <script type="text/javascript" src="resource/cookie.js"></script>
         <script type="text/javascript" src="resource/user.js"></script>
@@ -61,9 +62,9 @@
                     <!--<button type="button" id="playSound" class="sound">
                         <span></span>
                     </button>-->
-                    <div id="imageNav" class="imageNavigation hidden">
-                        <a id="previousImage" class="previousArrow"></a>
-                        <a id="nextImage" class="nextArrow"></a>
+                    <div id="stageFrame" class="imageNavigation hidden">
+                        <a id="previousFrame" class="previousArrow"></a>
+                        <a id="nextFrame" class="nextArrow"></a>
                     </div>
                     <div id="images" class="imageView"></div>
                     <div id="sounds" class="soundSpeak"></div>
