user name hint when user register

--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="resource/promise.js"></script>
         <script type="text/javascript" src="resource/ajax.js"></script>
         <script type="text/javascript" src="resource/simpleDom.js"></script>
-        <script type="text/javascript" src="resource/customEvent.js"></script>
+        <script type="text/javascript" src="resource/observableEvent.js"></script>
         <script type="text/javascript" src="resource/langstyle.js"></script>
         <script type="text/javascript" src="resource/cookie.js"></script>
         <script type="text/javascript" src="resource/user.js"></script>
