remove sound input

--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -78,9 +78,9 @@
                     <input type="file" id="imageFile" name="imageFile" />
                     <label id="fileSize"></label>
                     <br />
-                    <label class="fieldLabel">Sound</label>
+                    <!--<label class="fieldLabel">Sound</label>
                     <input type="file" id="soundFile" name="soundFile" />
-                    <br />
+                    <br />-->
                     <label class="fieldLabel">Character</label>
                     <input type="text" id="characterCode"/>
                     <br />
