--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width; initial-scale=1">
         <title>langstyle</title>
         <link rel="Stylesheet" href="resource/langstyle.css" />
         <script type="text/javascript" src="resource/promise.js"></script>
