--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -54,7 +54,7 @@
         <div id="main" class="content">
             <div id="stage" class="js-wordStage stage hidden">
                 <div class="stageButton">
-                    <button type="button" class="js-next" onclick="javascript:wordStage.play();">Next</button>
+                    <input type="button" class="js-next" onclick="javascript:wordStage.play();" value="Next" />
                 </div>
                 <div class="js-wordStageTop">
                     <div class="js-wordCharacter characterView">
@@ -87,7 +87,7 @@
                     <br />
                     <label class="js-add-validation validation"></label>
                     <div class="formBottom">
-                        <button type="submit" id="uploadImage">Submit</button>
+                        <input type="submit" id="uploadImage" value="Submit" />
                     </div>
                 </form>
             </div>
@@ -101,7 +101,7 @@
                 <br />
                 <label class="js-login-validation validation"></label>
                 <div class="formBottom">
-                    <button type="button" id="login">Log in</button>
+                    <input type="button" id="login" value="Log in" />
                 </div>
             </div>
 
@@ -117,7 +117,7 @@
                 <br />
                 <label class="js-register-validation validation"></label>
                 <div class="formBottom">
-                    <button type="button" id="register">Register</button>
+                    <input type="button" id="register" value="Register" />
                 </div>
             </div>
         
