--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -118,9 +118,13 @@
                 </div>
             </div>
 
-            <div id="userStage" class="hidden">
-                <a id="addMenu">Add</a>
-                <a id="logout">Log out</a>
+            <div id="userStage" class="hidden userStage">
+                <ol class="userMenu">
+                    <li id="addMenu"><span>Add</span></li>
+                </ol>
+                <div class="logoutMenu">
+                    <a id="logout">Log out</a>
+                </div>
             </div>
         
         </div>
